Give inline timer a min-width to avoid jumping when numbers change

--- a/cla_frontend/assets-src/stylesheets/design-patterns/_timer.scss
+++ b/cla_frontend/assets-src/stylesheets/design-patterns/_timer.scss
@@ -20,6 +20,7 @@
     padding-top: 0;
     position: relative;
     top: -2px;
+    min-width: 65px;
   }
 }
 
@@ -29,7 +30,7 @@
   width: 18px;
   background: $grey-1;
   text-align: center;
-  margin-left: 10px;
+  margin-left: 5px;
   @include border-radius(3px);
 
   &:after {
